<resources>
    <string name="app_name">Prodmais-Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_lembrete">Lembretes</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_conta">Conta</string>
    <string name="menu_siganos">Siga-nos</string>
    <string name="menu_compartilhar">Compartilhar</string>
    <string name="all_notes">Todas as Listas</string>
    <string name="action_search">Pesqusiar</string>
    <string name="slogan">Rumo a Produtividade Saudável</string>
</resources>