<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lembretes"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_lembrete" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_conta"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_conta" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_siganos"
                android:icon="@drawable/ic_baseline_thumb_up_24"
                android:title="@string/menu_siganos" />
            <item
                android:id="@+id/nav_compartilhar"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_compartilhar" />

        </menu>

    </item>
</menu>